src/pages/homePage/NavBar.css
.nav-bar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background-color: white;
    overflow: hidden;
    position: fixed;
    top: 0;
    z-index: 3;
    padding: 6px;
}
.apply {
    border: 1px solid #151D3B;
    background-color:#151D3B;
    color: white;
    padding: .9rem;
    text-align: center;
    cursor: pointer;
}

.nav{
    display: flex;
    justify-content: space-around;
    position: sticky;
    top: 0;
    z-index: 1;
    overflow: hidden;
}
.content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;

}
.content li{
    cursor: pointer;
    padding: .9rem .9rem .1rem;
}

.content li:hover{
    border-bottom: 2px solid red; 
}

.nav{
      align-items: center;
}
.apply p {
    text-decoration: none;
}

.apply:hover{
    background-color:#D82148;
    color: white;
}

